feat: 重构为Playground项目，优化项目数据结构和UI
- 更新项目定位为个人创意实验场(Playground)
- 更新README文档，明确项目范围和定位
- 更新主页标题和描述
- 优化项目数据结构，添加类型、状态、技术栈等字段
- 增强项目卡片显示，包含类型徽章、状态、技术栈等信息
- 修复调试面板快捷键冲突问题
- 改进调试面板初始化逻辑

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>个人项目集</title>
+    <title>Playground - 个人创意实验场</title>
     <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
@@ -13,8 +13,8 @@
     <!-- 主要内容 -->
     <div class="content-wrapper">
         <header class="header">
-            <h1 class="site-title">我的项目集</h1>
-            <p class="site-subtitle">探索与创造的小项目</p>
+            <h1 class="site-title">Playground</h1>
+            <p class="site-subtitle">个人创意实验场与灵感沉淀空间</p>
         </header>
         
         <main class="projects-container">
@@ -61,7 +61,7 @@
             </div>
         </div>
         <div class="debug-panel-footer">
-            <small>按 Option + T 切换显示/隐藏</small>
+            <small>快捷键：Ctrl/Cmd + Shift + ` 或 Ctrl/Cmd + Shift + D</small>
         </div>
     </div>
     
