更新项目：添加新功能、文档和子项目
- 更新主页样式和交互功能
- 添加项目指南和设置文档
- 新增笔记功能、Notion 同步功能
- 添加骰子滚动器项目
- 配置 Tailwind CSS 和组件系统
- 更新 API 文档和部署文档

--- a/index.html
+++ b/index.html
@@ -4,6 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Playground - 个人创意实验场</title>
+    <!-- Tailwind CSS CDN (开发环境) -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        darkMode: ["class"],
+        theme: {
+          extend: {
+            colors: {
+              border: "hsl(var(--border))",
+              input: "hsl(var(--input))",
+              ring: "hsl(var(--ring))",
+              background: "hsl(var(--background))",
+              foreground: "hsl(var(--foreground))",
+              primary: {
+                DEFAULT: "hsl(var(--primary))",
+                foreground: "hsl(var(--primary-foreground))",
+              },
+              secondary: {
+                DEFAULT: "hsl(var(--secondary))",
+                foreground: "hsl(var(--secondary-foreground))",
+              },
+              destructive: {
+                DEFAULT: "hsl(var(--destructive))",
+                foreground: "hsl(var(--destructive-foreground))",
+              },
+              muted: {
+                DEFAULT: "hsl(var(--muted))",
+                foreground: "hsl(var(--muted-foreground))",
+              },
+              accent: {
+                DEFAULT: "hsl(var(--accent))",
+                foreground: "hsl(var(--accent-foreground))",
+              },
+              popover: {
+                DEFAULT: "hsl(var(--popover))",
+                foreground: "hsl(var(--popover-foreground))",
+              },
+              card: {
+                DEFAULT: "hsl(var(--card))",
+                foreground: "hsl(var(--card-foreground))",
+              },
+            },
+            borderRadius: {
+              lg: "var(--radius)",
+              md: "calc(var(--radius) - 2px)",
+              sm: "calc(var(--radius) - 4px)",
+            },
+          },
+        },
+      }
+    </script>
+    <!-- shadcn 设计系统变量 -->
+    <link rel="stylesheet" href="css/shadcn.css">
+    <!-- shadcn 组件样式 -->
+    <link rel="stylesheet" href="css/components.css">
+    <!-- 主页样式 -->
     <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
@@ -67,6 +123,8 @@
     
     <!-- Three.js 库 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <!-- API 封装 -->
+    <script src="js/api.js"></script>
     <!-- 背景动画脚本 -->
     <script src="js/background.js"></script>
     <!-- 主页交互脚本 -->
